--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
