--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,7 @@ services:
       redis:
         condition: service_healthy
     secrets:
+      - pb_admin_email
       - pb_service_email
       - pb_service_password
 
