Add admin mail to backend also in prod and static dev

--- a/docker-compose.dev-with-static.yml
+++ b/docker-compose.dev-with-static.yml
@@ -34,6 +34,7 @@ services:
       redis:
         condition: service_healthy
     secrets:
+      - pb_admin_email
       - pb_service_email
       - pb_service_password
 
