--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles>=24.1.0",
+    "cryptography>=46.0.2",
     "fastapi>=0.116.1",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
