--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,6 @@ services:
       - ./backend/src:/app/src
       - ./backend/pyproject.toml:/app/pyproject.toml
       - ./backend/uv.lock:/app/uv.lock:ro
-      - ./scripts/load-secrets.sh:/usr/local/bin/load-secrets.sh:ro
     environment:
       - ENV=development
       - DEBUG=true
@@ -18,7 +17,6 @@ services:
       - POCKETBASE_URL=http://pocketbase:8090
     ports:
       - "8000:8000"
-    entrypoint: /usr/local/bin/load-secrets.sh
     command: uv run uvicorn kigaprio.main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/health"]
@@ -31,7 +29,7 @@ services:
       redis:
         condition: service_healthy
     secrets:
-      - pb_admin_email
+      - admin_master_key
       - pb_service_id
       - pb_service_password
 
@@ -96,6 +94,8 @@ services:
       retries: 5
 
 secrets:
+  admin_master_key:
+    file: ./.secrets/admin_master_key
   pb_admin_email:
     file: ./.secrets/pb_admin_email
   pb_admin_password:
