--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pypdf>=6.0.0",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
+    "requests>=2.32.5",
     "uvicorn[standard]>=0.35.0",
 ]
 
