--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,7 +29,7 @@ services:
       redis:
         condition: service_healthy
     secrets:
-      - admin_master_key
+      - admin_public_key
       - pb_service_id
       - pb_service_password
 
@@ -94,8 +94,8 @@ services:
       retries: 5
 
 secrets:
-  admin_master_key:
-    file: ./.secrets/admin_master_key
+  admin_public_key:
+    file: ./.secrets/admin_public_key.pem
   pb_admin_email:
     file: ./.secrets/pb_admin_email
   pb_admin_password:
