--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
     "requests>=2.32.5",
+    "types-requests>=2.32.4.20250913",
     "uvicorn[standard]>=0.35.0",
 ]
 
