--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -59,7 +59,7 @@ services:
       args:
         - USER_UID=1000
         - USER_GID=1000
-        - PB_VERSION=0.30.0
+        - PB_VERSION=0.30.2
     image: kigaprio-pocketbase
     restart: unless-stopped
     expose:
@@ -82,11 +82,9 @@ services:
   redis:
     image: redis:8-alpine
     restart: unless-stopped
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./redis:/data
-    command: redis-server --appendonly yes --appendfsync everysec
+    expose:
+      - 6379
+    command: redis-server --save "" --appendonly no
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
