--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,9 +100,7 @@ services:
     restart: unless-stopped
     expose:
       - 6379
-    volumes:
-      - ./redis:/data
-    command: redis-server --appendonly yes --appendfsync everysec
+    command: redis-server --save "" --appendonly no
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
