--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles>=24.1.0",
+    "cryptography>=46.0.2",
     "fastapi>=0.116.1",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
@@ -20,6 +21,8 @@ dependencies = [
     "pypdf>=6.0.0",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
+    "requests>=2.32.5",
+    "types-requests>=2.32.4.20250913",
     "uvicorn[standard]>=0.35.0",
 ]
 
