--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - ENV=production
       - DEBUG=false
-      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
+      - REDIS_URL=redis://redis:6379
       - POCKETBASE_URL=http://pocketbase:8090
     labels:
       - "traefik.enable=true"
@@ -20,6 +20,16 @@ services:
       - "traefik.http.routers.kigaprio-backend.tls=true"
       - "traefik.http.routers.kigaprio-backend.tls.certresolver=myresolver"
       - "traefik.http.services.kigaprio-backend.loadbalancer.server.port=8000"
+      
+      # Attach security headers middleware to the router
+      - "traefik.http.routers.kigaprio-backend.middlewares=security-headers@docker"
+      - "traefik.http.middlewares.security-headers.headers.stsSeconds=31536000"
+      - "traefik.http.middlewares.security-headers.headers.stsIncludeSubdomains=true"
+      - "traefik.http.middlewares.security-headers.headers.contentSecurityPolicy=default-src 'self'; script-src 'self'"
+      - "traefik.http.middlewares.security-headers.headers.customFrameOptionsValue=DENY"
+      - "traefik.http.middlewares.security-headers.headers.contentTypeNosniff=true"
+      - "traefik.http.middlewares.security-headers.headers.referrerPolicy=strict-origin-when-cross-origin"
+
     depends_on:
       pocketbase:
         condition: service_healthy
@@ -39,8 +49,8 @@ services:
       retries: 3
       start_period: 40s
     secrets:
-      - pb_admin_email
-      - pb_service_email
+      - admin_public_key
+      - pb_service_id
       - pb_service_password
 
   # Build frontend and copy static files
@@ -67,7 +77,7 @@ services:
       args:
         - USER_UID=1000
         - USER_GID=1000
-        - PB_VERSION=0.30.0
+        - PB_VERSION=0.30.2
     image: kigaprio-pocketbase
     restart: unless-stopped
     expose:
@@ -83,14 +93,6 @@ services:
       retries: 5
     networks:
       - kigaprio-prod
-      - proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.pocketbase.rule=Host(`pb.kiga.dhjd.de`)"
-      - "traefik.http.routers.pocketbase.entrypoints=websecure"
-      - "traefik.http.routers.pocketbase.tls=true"
-      - "traefik.http.routers.pocketbase.tls.certresolver=myresolver"
-      - "traefik.http.services.pocketbase.loadbalancer.server.port=8090"
     secrets:
       - pb_admin_email
       - pb_admin_password
@@ -100,9 +102,7 @@ services:
     restart: unless-stopped
     expose:
       - 6379
-    volumes:
-      - ./redis:/data
-    command: redis-server --appendonly yes --appendfsync everysec
+    command: redis-server --save "" --appendonly no
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -115,12 +115,14 @@ volumes:
   frontend-static:
 
 secrets:
+  admin_public_key:
+    file: ./.secrets/admin_public_key.pem
   pb_admin_email:
     file: ./.secrets/pb_admin_email
   pb_admin_password:
     file: ./.secrets/pb_admin_password
-  pb_service_email:
-    file: ./.secrets/pb_service_email
+  pb_service_id:
+    file: ./.secrets/pb_service_id
   pb_service_password:
     file: ./.secrets/pb_service_password
   
