--- a/docker-compose.dev-with-static.yml
+++ b/docker-compose.dev-with-static.yml
@@ -10,7 +10,6 @@ services:
       - ./backend/src:/app/src
       - ./backend/pyproject.toml:/app/pyproject.toml
       - ./backend/uv.lock:/app/uv.lock:ro
-      - ./scripts/load-secrets.sh:/usr/local/bin/load-secrets.sh:ro
       - frontend-static:/app/static:ro  # Read-only mount of built files
     environment:
       - ENV=development
@@ -21,7 +20,6 @@ services:
       - POCKETBASE_URL=http://pocketbase:8090
     ports:
       - "8000:8000"
-    entrypoint: /usr/local/bin/load-secrets.sh
     command: uv run uvicorn kigaprio.main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/health"]
@@ -34,8 +32,8 @@ services:
       redis:
         condition: service_healthy
     secrets:
-      - pb_admin_email
-      - pb_service_email
+      - admin_public_key
+      - pb_service_id
       - pb_service_password
 
   # Optional: Build frontend periodically for testing static serving
@@ -79,7 +77,7 @@ services:
       args:
         - USER_UID=1000
         - USER_GID=1000
-        - PB_VERSION=0.30.0
+        - PB_VERSION=0.30.2
     image: kigaprio-pocketbase
     restart: unless-stopped
     expose:
@@ -104,9 +102,7 @@ services:
     restart: unless-stopped
     ports:
       - "6379:6379"
-    volumes:
-      - ./redis:/data
-    command: redis-server --appendonly yes --appendfsync everysec
+    command: redis-server --save "" --appendonly no
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -118,11 +114,13 @@ volumes:
   frontend-node-modules:
 
 secrets:
+  admin_public_key:
+    file: ./.secrets/admin_public_key.pem
   pb_admin_email:
     file: ./.secrets/pb_admin_email
   pb_admin_password:
     file: ./.secrets/pb_admin_password
-  pb_service_email:
-    file: ./.secrets/pb_service_email
+  pb_service_id:
+    file: ./.secrets/pb_service_id
   pb_service_password:
     file: ./.secrets/pb_service_password
