--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
+    "prometheus-client>=0.23.1",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.9",
     "pypdf>=6.0.0",
