--- a/monitoring/docker-compose.monitoring.yml
+++ b/monitoring/docker-compose.monitoring.yml
@@ -24,7 +24,7 @@ services:
       - "traefik.http.routers.prometheus.entrypoints=websecure"
       - "traefik.http.routers.prometheus.tls=true"
       - "traefik.http.routers.prometheus.tls.certresolver=myresolver"
-      - "traefik.http.routers.prometheus.middlewares=admin-auth"
+      - "traefik.http.routers.prometheus.middlewares=admin-auth@file"
       - "traefik.http.services.prometheus.loadbalancer.server.port=9090"
     security_opt:
       - no-new-privileges:true
