--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,6 @@ services:
       - "traefik.http.routers.kigaprio-backend.tls=true"
       - "traefik.http.routers.kigaprio-backend.tls.certresolver=myresolver"
       - "traefik.http.services.kigaprio-backend.loadbalancer.server.port=8000"
-
     depends_on:
       pocketbase:
         condition: service_healthy
@@ -47,6 +46,7 @@ services:
       - pb_service_password
       - server_cache_key
       - redis_pass
+      - metrics_token
 
   # Build frontend and copy static files
   frontend-builder:
@@ -149,6 +149,8 @@ secrets:
     file: ./.secrets/redis_pass
   server_cache_key:
     file: ./.secrets/server_cache_key
+  metrics_token:
+    file: ./.secrets/metrics_token
 
 networks:
   db-net:
