--- a/admin_ui/package.json
+++ b/admin_ui/package.json
@@ -23,6 +23,7 @@
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/node": "^22",
+		"@types/node-forge": "^1.3.14",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
@@ -42,6 +43,7 @@
 	},
 	"dependencies": {
 		"@iconify/json": "^2.2.399",
+		"node-forge": "^1.3.1",
 		"unplugin-icons": "^22.5.0"
 	}
 }
