Add CORS var to backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DEBUG=false
       - REDIS_URL=redis://redis:6379
       - POCKETBASE_URL=http://pocketbase:8090
+      - CORS_ORIGINS=https://admin.kiga.dhjd.de,https://kiga.dhjd.de
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kigaprio-backend.rule=Host(`kiga.dhjd.de`)"
