--- a/monitoring/docker-compose.monitoring.yml
+++ b/monitoring/docker-compose.monitoring.yml
@@ -26,6 +26,7 @@ services:
       - "traefik.http.routers.prometheus.entrypoints=websecure"
       - "traefik.http.routers.prometheus.tls=true"
       - "traefik.http.routers.prometheus.tls.certresolver=myresolver"
+      - "traefik.http.routers.prometheus.tls.options=modern-tls@file"
       - "traefik.http.routers.prometheus.middlewares=admin-auth@file"
       - "traefik.http.services.prometheus.loadbalancer.server.port=9090"
     security_opt:
