--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.9",
     "pypdf>=6.0.0",
+    "python-dateutil>=2.9.0",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
     "requests>=2.32.5",
