--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
     "pytest>=8.4.2",
     "ruff>=0.13.0",
     "types-aiofiles>=24.1.0.20250822",
+    "types-python-dateutil>=2.9.0.20251108",
     "types-pyyaml>=6.0.12.20250915",
     "types-ujson>=5.10.0.20250822",
 ]
