--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,11 @@ dependencies = [
 dev = [
     "mypy>=1.18.1",
     "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.14.0",
+    "httpx>=0.28.1",
+    "fakeredis>=2.28.2",
     "ruff>=0.13.0",
     "types-aiofiles>=24.1.0.20250822",
     "types-python-dateutil>=2.9.0.20251108",
@@ -85,3 +90,25 @@ ignore_missing_imports = true
 warn_unused_ignores = true
 warn_redundant_casts = true
 warn_unused_configs = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+addopts = [
+    "--strict-markers",
+    "--tb=short",
+    "--cov=kigaprio",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+    "--cov-branch",
+]
+markers = [
+    "unit: Unit tests that don't require external dependencies",
+    "integration: Integration tests that require Redis, PocketBase, etc.",
+    "security: Security-focused tests",
+    "slow: Tests that take a long time to run",
+]
