Use pgrep for healthcheck on scheduler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,12 @@ services:
     networks:
       - db-net
       - monitoring
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep -f supercronic || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     secrets:
       - pb_service_id
       - pb_service_password
