--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -128,6 +128,12 @@ services:
       - CLEANUP_INTERVAL_HOURS=1
       - PRIORITY_RETENTION_MONTHS=2
       - USER_INACTIVITY_MONTHS=6
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep -f supercronic || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     depends_on:
       backend:
         condition: service_healthy
