--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,28 +45,34 @@ jobs:
   backend-tests:
     name: Backend Tests
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Install uv
       uses: astral-sh/setup-uv@v3
       with:
         version: "latest"
-    
+
     - name: Set up Python
       run: uv python install
       working-directory: ./backend
-    
+
     - name: Install dependencies
       run: uv sync
       working-directory: ./backend
-    
-    - name: Run tests
-      run: uv run pytest
+
+    - name: Run tests with coverage
+      run: uv run pytest --cov=src/kigaprio --cov-report=xml
       working-directory: ./backend
       env:
         POCKETBASE_URL: http://pocketbase:8090
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: false
 
   frontend-security:
     name: Frontend Security Audit
