--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,18 +49,20 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Create required secrets directory
+    - name: Create test secrets directory
       run: |
         mkdir -p .secrets
-        # Create dummy secret files for testing
-        echo "dummy-key-for-testing-$(openssl rand -base64 32)" > .secrets/admin_public_key.pem
-        echo "test@example.com" > .secrets/pb_admin_email
-        echo "test-password-$(openssl rand -base64 16)" > .secrets/pb_admin_password
-        echo "service-id-$(openssl rand -hex 16)" > .secrets/pb_service_id
-        echo "service-password-$(openssl rand -base64 32)" > .secrets/pb_service_password
-        echo "redis-password-$(openssl rand -base64 32)" > .secrets/redis_pass
-        echo "cache-key-$(openssl rand -base64 32)" > .secrets/server_cache_key
-        echo "metrics-token-$(openssl rand -base64 32)" > .secrets/metrics_token
+        # Generate RSA keypair for admin encryption
+        openssl genpkey -algorithm RSA -pkeyopt rsa_keygen_bits:2048 \
+          | openssl pkey -pubout -out .secrets/admin_public_key.pem
+        # Create secret files with hex passwords (URL-safe, no special chars)
+        echo "admin@example.com" > .secrets/pb_admin_email
+        echo "admintest" > .secrets/pb_admin_password
+        echo "service-id-$(openssl rand -hex 8)" > .secrets/pb_service_id
+        echo "ServicePass$(openssl rand -hex 8)" > .secrets/pb_service_password
+        echo "$(openssl rand -hex 32)" > .secrets/redis_pass
+        echo "$(openssl rand -hex 32)" > .secrets/server_cache_key
+        echo "$(openssl rand -hex 16)" > .secrets/metrics_token
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -71,38 +73,32 @@ jobs:
     - name: Start dependencies (PocketBase & Redis)
       run: |
         docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml up -d pocketbase redis
-        # Wait for services to be healthy
-        echo "Waiting for services to be ready..."
+        echo "Waiting for services to be healthy..."
         timeout 120 sh -c 'until docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml ps pocketbase | grep -q "healthy" && docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml ps redis | grep -q "healthy"; do sleep 2; done'
         echo "Services are ready!"
 
     - name: Initialize PocketBase admin user
       run: |
         echo "Creating PocketBase superuser..."
-        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --rm pocketbase \
+        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml exec -T pocketbase \
           ./pocketbase superuser upsert admin@example.com admintest
 
     - name: Setup PocketBase test data
       run: |
         echo "Setting up PocketBase test data (magic word, service account)..."
-        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --rm backend \
+        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --rm --no-deps backend \
           uv run python tests/integration/setup_pocketbase.py
 
     - name: Run tests with coverage
       run: |
-        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --rm \
-          -e USE_DOCKER_SERVICES=true \
-          -e REDIS_PASSWORD=$(cat .secrets/redis_pass) \
+        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --name kigaprio-ci-test-runner --no-deps \
           backend \
           uv run pytest --cov=kigaprio --cov-report=xml --cov-report=term-missing
 
     - name: Copy coverage report from container
       if: always()
       run: |
-        # Create a temporary container to copy the coverage file
-        container_id=$(docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --rm -d backend sleep 1)
-        docker cp ${container_id}:/app/coverage.xml ./coverage.xml 2>/dev/null || \
-        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml run --rm backend cat coverage.xml > coverage.xml 2>/dev/null || \
+        docker cp kigaprio-ci-test-runner:/app/coverage.xml ./coverage.xml 2>/dev/null || \
         echo "Warning: No coverage file found"
 
     - name: Upload coverage to Codecov
@@ -116,7 +112,11 @@ jobs:
 
     - name: Cleanup
       if: always()
-      run: docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml down -v
+      run: |
+        # Remove test runner container if it exists
+        docker rm -f kigaprio-ci-test-runner 2>/dev/null || true
+        # Shutdown services
+        docker compose -f docker-compose.dev.yml -f docker-compose.ci.yml down -v
 
   frontend-security:
     name: Frontend Security Audit
